# QtScrcpy

./: CMakeLists.txt
QtScrcpy/: CMakeLists.txt  main.cpp
QtScrcpy/QtScrcpyCore/: CMakeLists.txt
QtScrcpy/QtScrcpyCore/include/: QtScrcpyCore.h
QtScrcpy/QtScrcpyCore/src/adb/: adbprocessimpl.cpp
QtScrcpy/QtScrcpyCore/src/device/: device.cpp  device.h
QtScrcpy/QtScrcpyCore/src/device/controller/inputconvert/: controlmsg.cpp  controlmsg.h  inputconvertgame.cpp  inputconvertgame.h  inputconvertnormal.cpp
QtScrcpy/QtScrcpyCore/src/device/controller/receiver/: devicemsg.cpp
QtScrcpy/QtScrcpyCore/src/device/decoder/: avframeconvert.cpp  avframeconvert.h  decoder.cpp  decoder.h  videobuffer.cpp  videobuffer.h
QtScrcpy/QtScrcpyCore/src/device/demuxer/: demuxer.cpp  demuxer.h
QtScrcpy/QtScrcpyCore/src/device/recorder/: recorder.cpp  recorder.h
QtScrcpy/QtScrcpyCore/src/device/server/: server.cpp  tcpserver.cpp  videosocket.cpp  videosocket.h
QtScrcpy/QtScrcpyCore/src/devicemanage/: devicemanage.cpp
QtScrcpy/audio/: audiooutput.cpp  audiooutput.h
QtScrcpy/groupcontroller/: groupcontroller.cpp  groupcontroller.h
QtScrcpy/render/: qyuvopenglwidget.cpp  qyuvopenglwidget.h
QtScrcpy/res/: res.qrc
QtScrcpy/res/i18n/: CMakeLists.txt
QtScrcpy/sndcpy/: sndcpy.apk  sndcpy.sh  soundservice.apk
QtScrcpy/ui/: dialog.cpp  toolform.cpp  videoform.cpp  videoform.h
QtScrcpy/util/mousetap/: xmousetap.cpp
config/: config.ini
keymap/: 1d3l 1080p.json  1d3l 720p.json  d3l-layoutgila.json
